# pybind-project

./: CMakeLists.txt  README.md  pyproject.toml
examples/: example.py
src/: MyString.cpp  MyString.h  main.cpp
